added handler test, fixed project after review
