# cmd/api/main.go
@@ -1,10 +1,9 @@
 package main
 
 import (
+	"database/sql"
 	_ "github.com/go-sql-driver/mysql"
 	"github.com/gorilla/mux"
-	"github.com/jmoiron/sqlx"
-	_ "github.com/lib/pq"
 	log "github.com/sirupsen/logrus"
 	"net/http"
 	httpauth "project/internal/auth/delivery/http"
@@ -14,7 +13,29 @@ import (
 	httpuser "project/internal/user/delivery/http"
 	userrepository "project/internal/user/repository"
 	userusecase "project/internal/user/usecase"
+
+	//"github.com/jmoiron/sqlx"
+	_ "github.com/lib/pq"
 )
+
+var schema = `
+	DROP TABLE Profile;
+	DROP TABLE Session;
+
+	CREATE TABLE Profile (
+    id       serial,
+    username varchar(255),
+    name     varchar(255),
+    email    varchar(255),
+    status   varchar(255),
+    password varchar(255)
+);
+
+CREATE TABLE Session (
+    user_id integer,
+    cookie  varchar(255)
+);
+`
 
 func main() {
 	log.SetFormatter(&log.TextFormatter{
@@ -23,11 +44,14 @@ func main() {
 	log.SetReportCaller(true)
 
 	connStr := "user=golang password=golang dbname=golang sslmode=disable"
-	db, err := sqlx.Open("postgres", connStr)
+	db, err := sql.Open("postgres", connStr)
 
 	if err != nil {
 		log.Fatal(err)
 	}
+
+	db.Exec(schema)
+
 	repositoryAuth := authrepository.NewAuthMemoryRepository(db)
 	repositoryUser := userrepository.NewUserMemoryRepository(db)
 
@@ -36,6 +60,7 @@ func main() {
 
 	r := mux.NewRouter()
 	r.Use(middleware.RequestResponseMiddleware)
+	r.Use(middleware.Cors)
 
 	httpauth.NewAuthHandler(r, usecaseAuth)
 	httpuser.NewUserHandler(r, usecaseUser)
